tests/Fase2-Semantic/error/t07-same_name_of_attr_and_method.ctds
class main {
	integer x;
	bool add;

	integer add(){
		x = x+1;
		return x;
	}

	void notmain(){
		x=0;
		add();
	}
	
}